--- a/GPSCompanionApp/app/build.gradle
+++ b/GPSCompanionApp/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId 'dissertation.GPSCompanionApp'
         minSdkVersion 21
@@ -19,6 +18,7 @@ android {
     }
     productFlavors {
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
